EDU-1196 Fix trust footer layout on mobile

--- a/src/components/homepage/homepage-trust-footer.less
+++ b/src/components/homepage/homepage-trust-footer.less
@@ -13,15 +13,16 @@
 }
 
 .HomepageTrustFooter-content {
-  display: grid;
-  gap: 30px;
-  grid-auto-flow: column;
-  place-items: center;
+  display: flex;
+  flex-wrap: wrap;
+  align-items: center;
+  justify-content: center;
 }
 
 .HomepageTrustFooter-logo {
   width: 150px;
   height: 60px;
+  margin: 0 15px;
 }
 
 .HomepageTrustFooter-logoImage {
